# BigBlurTest

./: .gitignore  BigBlurTest.cpp  CMakeLists.txt  README.md  _cmake_clang_dbg.cmd  _cmake_clang_rel.cmd  _cmake_gcc_dbg.cmd  _cmake_gcc_rel.cmd  _cmake_vs17_dbg.cmd  _cmake_vs17_rel.cmd  main.cpp  san_image_list.hpp  san_recursive.hpp  san_recursive_blur_calc_rgba.hpp  san_stack_blur_naive.hpp
.github/workflows/: cmake.yml
pics/: Chess_Board.txt  joshua-kettle-THbfldOw4z0-unsplash.txt  lorenzo-lamonica-uexTJwTDF_4-unsplash.txt  todd-quackenbush-B60t4HvxznY-unsplash.txt  tom-winckels-I7oLRdM9YIw-unsplash.txt
src/: san_adaptor_agg_image.hpp  san_adaptor_straight_line.hpp  san_agg_image_adaptor.hpp  san_blur_gaussian_naive.hpp  san_blur_line_adaptor.hpp  san_blur_recursive_naive.hpp  san_blur_stack_luts.hpp  san_blur_stack_naive.hpp  san_blur_stack_naive_calc.hpp  san_blur_stack_simd_calc.hpp  san_blur_stack_simd_naive.hpp  san_blur_stack_simd_optimized_1.hpp  san_blur_stack_simd_optimized_2.hpp  san_cmake_config.hpp  san_cmake_config.hpp.in  san_cpu_features.hpp  san_cpu_info.hpp  san_image_list.hpp  san_image_view.hpp  san_impl_list.hpp  san_impls_list.hpp  san_line_adaptor.hpp  san_parallel_for.hpp  san_pch.hpp  san_rgba_calc_naive.hpp  san_rgba_calc_sse2.hpp  san_stack_blur_calc_rgba_naive.hpp  san_stack_blur_calc_rgba_sse2.hpp  san_stack_blur_luts.hpp  san_stack_blur_naive.hpp  san_stack_blur_naive_calc.hpp  san_stack_blur_simd.hpp  san_stack_blur_simd_calc.hpp  san_stack_blur_simd_calc_common.hpp  san_stack_blur_simd_calc_sse2.hpp  san_stack_blur_simd_calc_sse41.hpp  san_stack_blur_simd_fastest.hpp  san_stack_blur_simd_fastest_2.hpp  san_surface.hpp  san_ui.hpp  (+12 more)
src/agg/: agg_basics.h  agg_blur.h  agg_config.h  agg_pixfmt_transposer.h  agg_recursive_blur_mt.hpp  agg_stack_blur_mt.hpp
src/cpu_features/: CMakeLists.txt
src/platform/: san_platform.hpp  san_window_base.hpp  san_window_win32.hpp
src/ui/: san_ui.hpp  san_ui_ctrl.hpp  san_ui_ctrl_button.hpp  san_ui_ctrl_checkbox.hpp  san_ui_ctrl_link.hpp  san_ui_ctrl_slider.hpp  san_ui_ctrl_text.hpp
